Prevent element overlapping when opening sidebar

--- a/frontend/src/app/layout/layout/layout.component.scss
+++ b/frontend/src/app/layout/layout/layout.component.scss
@@ -5,7 +5,7 @@ ng-sidebar-container {
 //ng-deep needed to target ng-sidebar's inner classes
 ::ng-deep .ng-sidebar {
     background: linear-gradient(86deg, #210949 0%, #502694 100%);
-    width: 250px;
+    width: 14%;
 }
 
 ::ng-deep .ng-sidebar--opened {
